<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Framework: core delegation and master Plus switch -->
    <af.shizuku.manager.settings.CollapsiblePreferenceCategory
        android:key="category_plus_framework"
        android:title="@string/settings_plus_category_framework"
        android:defaultValue="true">

        <af.shizuku.manager.settings.PlusFeaturePreference
            android:key="dhizuku_mode"
            android:title="@string/settings_dhizuku_mode"
            android:summary="@string/settings_dhizuku_mode_summary"
            android:icon="@drawable/ic_admin_panel_settings_24dp"
            app:infoTitle="@string/help_dhizuku_title"
            app:infoDetail="@string/help_dhizuku_detail" />

        <af.shizuku.manager.settings.PlusFeaturePreference
            android:key="custom_api_enabled"
            android:title="@string/settings_enhanced_api"
            android:summary="@string/settings_enhanced_api_summary"
            android:icon="@drawable/ic_code_24dp"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="hide_disabled_plus_features"
            android:title="@string/settings_hide_disabled_plus_features"
            android:summary="@string/settings_hide_disabled_plus_features_summary"
            android:icon="@drawable/ic_visibility_24"
            android:defaultValue="false" />

    </af.shizuku.manager.settings.CollapsiblePreferenceCategory>

    <!-- Performance: shell-level acceleration and process control -->
    <af.shizuku.manager.settings.CollapsiblePreferenceCategory
        android:key="category_plus_performance"
        android:title="@string/settings_plus_category_performance"
        android:defaultValue="true">

        <af.shizuku.manager.settings.PlusFeaturePreference
            android:key="shell_interceptor_enabled"
            android:title="@string/settings_shell_interceptor"
            android:summary="@string/settings_shell_interceptor_summary"
            android:icon="@drawable/ic_terminal_24"
            android:defaultValue="true"
            app:infoTitle="@string/help_shell_interceptor_title"
            app:infoDetail="@string/help_shell_interceptor_detail" />

        <af.shizuku.manager.settings.PlusFeaturePreference
            android:key="activity_manager_plus_enabled"
            android:title="@string/settings_activity_manager_plus"
            android:summary="@string/settings_activity_manager_plus_summary"
            android:icon="@drawable/ic_bolt_24dp"
            android:defaultValue="true"
            app:infoTitle="@string/help_activity_manager_plus_title"
            app:infoDetail="@string/help_activity_manager_plus_detail" />

    </af.shizuku.manager.settings.CollapsiblePreferenceCategory>

    <!-- Files & VMs: storage access and virtual machines -->
    <af.shizuku.manager.settings.CollapsiblePreferenceCategory
        android:key="category_plus_files"
        android:title="@string/settings_plus_category_files"
        android:defaultValue="true">

        <af.shizuku.manager.settings.PlusFeaturePreference
            android:key="storage_proxy_enabled"
            android:title="@string/settings_storage_proxy"
            android:summary="@string/settings_storage_proxy_summary"
            android:icon="@drawable/ic_folder_24"
            android:defaultValue="true"
            app:infoTitle="@string/help_storage_proxy_title"
            app:infoDetail="@string/help_storage_proxy_detail" />

        <af.shizuku.manager.settings.PlusFeaturePreference
            android:key="avf_manager_enabled"
            android:title="@string/settings_avf_manager_experimental"
            android:summary="@string/settings_avf_manager_summary"
            android:icon="@drawable/ic_server_24"
            android:defaultValue="true"
            app:infoTitle="@string/help_avf_manager_title"
            app:infoDetail="@string/help_avf_manager_detail" />

    </af.shizuku.manager.settings.CollapsiblePreferenceCategory>

    <!-- Display & Theming: windows and overlay management -->
    <af.shizuku.manager.settings.CollapsiblePreferenceCategory
        android:key="category_plus_display"
        android:title="@string/settings_plus_category_display"
        android:defaultValue="true">

        <af.shizuku.manager.settings.PlusFeaturePreference
            android:key="window_manager_plus_enabled"
            android:title="@string/settings_window_manager_plus"
            android:summary="@string/settings_window_manager_plus_summary"
            android:icon="@drawable/ic_window_24"
            android:defaultValue="true"
            app:infoTitle="@string/help_window_manager_plus_title"
            app:infoDetail="@string/help_window_manager_plus_detail" />

        <af.shizuku.manager.settings.PlusFeaturePreference
            android:key="overlay_manager_plus_enabled"
            android:title="@string/settings_overlay_manager_plus"
            android:summary="@string/settings_overlay_manager_plus_summary"
            android:icon="@drawable/ic_palette_24"
            android:defaultValue="true"
            android:dependency="window_manager_plus_enabled"
            app:infoTitle="@string/help_overlay_manager_plus_title"
            app:infoDetail="@string/help_overlay_manager_plus_detail" />

    </af.shizuku.manager.settings.CollapsiblePreferenceCategory>

    <!-- Network & Privacy -->
    <af.shizuku.manager.settings.CollapsiblePreferenceCategory
        android:key="category_plus_network"
        android:title="@string/settings_plus_category_network"
        android:defaultValue="true">

        <af.shizuku.manager.settings.PlusFeaturePreference
            android:key="network_governor_plus_enabled"
            android:title="@string/settings_network_governor_plus"
            android:summary="@string/settings_network_governor_plus_summary"
            android:icon="@drawable/ic_lan_24dp"
            android:defaultValue="true"
            app:infoTitle="@string/help_network_governor_plus_title"
            app:infoDetail="@string/help_network_governor_plus_detail" />

    </af.shizuku.manager.settings.CollapsiblePreferenceCategory>

    <!-- Intelligence & Continuity -->
    <af.shizuku.manager.settings.CollapsiblePreferenceCategory
        android:key="category_plus_intelligence"
        android:title="@string/settings_plus_category_intelligence"
        android:defaultValue="true">

        <af.shizuku.manager.settings.PlusFeaturePreference
            android:key="ai_core_plus_enabled"
            android:title="@string/settings_ai_core_plus_experimental"
            android:summary="@string/settings_ai_core_plus_summary"
            android:icon="@drawable/ic_integration_instructions_24"
            android:defaultValue="true"
            app:infoTitle="@string/help_ai_core_plus_title"
            app:infoDetail="@string/help_ai_core_plus_detail" />

        <af.shizuku.manager.settings.PlusFeaturePreference
            android:key="continuity_bridge_enabled"
            android:title="@string/settings_continuity_bridge"
            android:summary="@string/settings_continuity_bridge_summary"
            android:icon="@drawable/ic_devices_24"
            android:defaultValue="true"
            app:infoTitle="@string/help_continuity_bridge_title"
            app:infoDetail="@string/help_continuity_bridge_detail" />

    </af.shizuku.manager.settings.CollapsiblePreferenceCategory>

    <!-- Root Compatibility: granular modules for legacy app support -->
    <af.shizuku.manager.settings.CollapsiblePreferenceCategory
        android:key="category_root_compat"
        android:title="@string/settings_plus_category_root_compat"
        android:defaultValue="false">

        <af.shizuku.manager.settings.PlusFeaturePreference
            android:key="root_adaway_bridge_enabled"
            android:title="@string/settings_root_adaway_bridge"
            android:summary="@string/settings_root_adaway_bridge_summary"
            android:icon="@drawable/ic_shield_24"
            android:defaultValue="false"
            android:dependency="custom_api_enabled"
            app:infoTitle="@string/help_root_adaway_title"
            app:infoDetail="@string/help_root_adaway_detail" />

        <af.shizuku.manager.settings.PlusFeaturePreference
            android:key="root_magisk_mocking_enabled"
            android:title="@string/settings_root_magisk_mocking"
            android:summary="@string/settings_root_magisk_mocking_summary"
            android:icon="@drawable/ic_settings_suggest_24dp"
            android:defaultValue="false"
            android:dependency="custom_api_enabled"
            app:infoTitle="@string/help_root_magisk_title"
            app:infoDetail="@string/help_root_magisk_detail" />

        <af.shizuku.manager.settings.PlusFeaturePreference
            android:key="root_auto_grant_enabled"
            android:title="@string/settings_root_auto_grant"
            android:summary="@string/settings_root_auto_grant_summary"
            android:icon="@drawable/ic_admin_panel_settings_24dp"
            android:defaultValue="false"
            android:dependency="custom_api_enabled"
            app:infoTitle="@string/help_root_auto_grant_title"
            app:infoDetail="@string/help_root_auto_grant_detail" />

        <af.shizuku.manager.settings.PlusFeaturePreference
            android:key="root_file_interceptor_enabled"
            android:title="@string/settings_root_file_interceptor"
            android:summary="@string/settings_root_file_interceptor_summary"
            android:icon="@drawable/ic_folder_24"
            android:defaultValue="false"
            android:dependency="custom_api_enabled"
            app:infoTitle="@string/help_root_file_interceptor_title"
            app:infoDetail="@string/help_root_file_interceptor_detail" />

        <af.shizuku.manager.settings.PlusFeaturePreference
            android:key="root_busybox_mocking_enabled"
            android:title="@string/settings_root_busybox_mocking"
            android:summary="@string/settings_root_busybox_mocking_summary"
            android:icon="@drawable/ic_terminal_24"
            android:defaultValue="false"
            android:dependency="custom_api_enabled"
            app:infoTitle="@string/help_root_busybox_title"
            app:infoDetail="@string/help_root_busybox_detail" />

    </af.shizuku.manager.settings.CollapsiblePreferenceCategory>

    <af.shizuku.manager.settings.CollapsiblePreferenceCategory
        android:key="category_developer"
        android:title="@string/settings_plus_category_developer"
        android:visible="false"
        android:defaultValue="false">

        <af.shizuku.manager.settings.PlusFeaturePreference
            android:key="vector_enabled"
            android:title="@string/settings_vector_experimental"
            android:summary="@string/settings_vector_summary"
            android:icon="@drawable/ic_code_24dp"
            android:defaultValue="false" />

        <af.shizuku.manager.settings.PlusFeaturePreference
            android:key="experimental_root_compat"
            android:title="@string/settings_experimental_root_experimental"
            android:summary="@string/settings_experimental_root_summary"
            android:icon="@drawable/ic_science_24dp"
            android:defaultValue="false" />

        <af.shizuku.manager.settings.PlusFeaturePreference
            android:key="spoof_device_enabled"
            android:title="@string/settings_spoof_device_experimental"
            android:summary="@string/settings_spoof_device_summary"
            android:icon="@drawable/ic_smartphone_24dp"
            android:defaultValue="false" />

        <rikka.preference.SimpleMenuPreference
            android:key="spoof_target"
            android:title="@string/settings_spoof_target"
            android:entries="@array/spoof_targets"
            android:entryValues="@array/spoof_targets_values"
            android:defaultValue="pixel_8_pro"
            android:summary="%s"
            android:icon="@drawable/ic_smartphone_24dp" />

    </af.shizuku.manager.settings.CollapsiblePreferenceCategory>

</PreferenceScreen>
