<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Card.Small">

    <ImageView
        android:id="@android:id/icon"
        style="@style/CardIcon"
        android:duplicateParentState="true"
        android:importantForAccessibility="yes"
        android:contentDescription="@string/accessibility_icon_learn_more"
        android:src="@drawable/ic_learn_more_24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/m3e_spacing_large"
        android:duplicateParentState="true"
        android:orientation="vertical">

        <TextView
            android:id="@android:id/text1"
            style="@style/CardTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:duplicateParentState="true"
            android:text="@string/home_learn_more_title" />

        <TextView
            android:id="@android:id/text2"
            style="@style/CardSummary.Brief"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:duplicateParentState="true"
            android:text="@string/home_learn_more_description" />

    </LinearLayout>

</LinearLayout>